test/classes/initializers/errors/lhsConsRhsInit.good
lhsConsRhsInit.chpl:18: error: type mismatch between 'hasConstruct' and 'hasInit'
